--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.1.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.11"
   }
 }
