--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@toast-ui/vue-editor": "^1.0.3",
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.2"
   },
@@ -26,7 +28,9 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "expose-loader": "^0.7.5",
     "file-loader": "^1.1.4",
+    "popper.js": "^1.14.6",
     "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^4.1.0",
