--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vue2-ace-editor": "0.0.13"
   },
   "browserslist": [
     "> 1%",
