--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "vue": "^2.5.11",
+    "vue-js-modal": "^1.3.28",
     "vue-router": "^3.0.2",
     "vue2-ace-editor": "0.0.13"
   },
