--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.11",
     "vue-js-modal": "^1.3.28",
+    "vue-moment": "^4.0.0",
+    "vue-momentjs": "^0.1.2",
     "vue-router": "^3.0.2",
     "vue2-ace-editor": "0.0.13"
   },
