[준연] C메뉴 관련 파일 구조 수정 및 Vuetify 설치

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-moment": "^4.0.0",
     "vue-momentjs": "^0.1.2",
     "vue-router": "^3.0.2",
-    "vue2-ace-editor": "0.0.13"
+    "vue2-ace-editor": "0.0.13",
+    "vuetify": "^1.5.0"
   },
   "browserslist": [
     "> 1%",
