--- a/hokage-website/package.json
+++ b/hokage-website/package.json
@@ -10,7 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": ">=4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
