--- a/hokage-server/package.json
+++ b/hokage-server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www localhost 3000"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
@@ -13,5 +14,8 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
