--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ hokage-webapp/dist/
 hokage-webapp/npm-debug.log*
 hokage-webapp/yarn-debug.log*
 hokage-webapp/yarn-error.log*
+hokage-webapp/config/env.js
