[준연] hokage-server에 바벨 추가 및 DB 서버 접속 템플릿 작성

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ hokage-webapp/npm-debug.log*
 hokage-webapp/yarn-debug.log*
 hokage-webapp/yarn-error.log*
 hokage-webapp/config/env.js
+hokage-server/config/env.js
