--- a/hokage-server/package.json
+++ b/hokage-server/package.json
@@ -14,8 +14,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0",
-    "pug": "^2.0.3"
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "babel-loader": "^8.0.5",
