--- a/hokage-server/package.json
+++ b/hokage-server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0"
   },
