--- a/hokage-server/package.json
+++ b/hokage-server/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "pbkdf2-password": "^1.2.1"
   },
   "devDependencies": {
     "babel-loader": "^8.0.5",
