--- a/hokage-server/package.json
+++ b/hokage-server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-query-boolean": "^2.0.0",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
